--- a/app/assets/stylesheets/master.css.scss
+++ b/app/assets/stylesheets/master.css.scss
@@ -10,7 +10,7 @@ html, body {
 
 header {
 	background: url('51H.jpg') no-repeat center fixed;
-	height: 750px;
+	height: 800px;
 	-webkit-background-size: cover;
 	-moz-background-size: cover;
 	-o-background-size: cover;
@@ -51,7 +51,7 @@ a {
 }
 
 p { 
-	font-size: 26px;
+	font-size: 22px;
 	font-style: sans-serif;	
 	font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
 	font-weight: 100;
@@ -79,7 +79,7 @@ p {
 }
 
 
-.jumbotron{
+.jumbotron {
   background-color: transparent;
   color: white;
   text-align: center;
@@ -110,6 +110,16 @@ p {
 
 #skills {
 	text-align: center;
+}
+
+.skill-label {
+	font-size: 24px;
+	font-weight: 100;
+}
+
+.glyphicon {
+	font-size: 1.35em;
+	color: #E18728;
 }
 
 .about {
