--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -22,9 +22,9 @@
       </button>
       <div class="collapse navbar-collapse" id="navbar-collapse">   
         <ul class="nav navbar-nav navbar-right">
-          <%= link_to 'About', '#about', :class => 'btn btn-default btn-sm' %>
-          <%= link_to 'Work', '#', :class => 'btn btn-default btn-sm' %>
-          <%= link_to 'Drop a line', '#drop a line', :class => 'btn btn-default btn-sm' %>
+          <%= link_to 'About', '#about', :class => 'btn-1 btn-default btn btn-block' %>
+          <%= link_to 'Work', '#', :class => 'btn-1 btn-default btn btn-block' %>
+          <%= link_to 'Drop a line', '#drop a line', :class => 'btn-1 btn-default btn btn-block' %>
         </ul>    
       </div><!-- /.navbar-collapse -->
     </div><!-- /.container-fluid -->
@@ -36,7 +36,7 @@
     </h1> 
     <br />
     <h2> Full stack web developer </h2>
-      <i><span> Web application buildier </span></i>
+      <i><span> Application builder </span></i>
    </div> 
   </div> 
 </header>
@@ -52,19 +52,21 @@
   </div> 
   <div class="col-xs-10 col-sm-8 col-sm-offset-2"> 
     <h3>Seb</h3>
-      <p>Full stack developer, some programming languages in my belt are: CSS, HTML  Ruby, R, and JQuery. I'm a music lover, beer drinker, number cruncher, film marathonist and cat friendly. 
-      Love to build incredible apps and to persuit awesomeness...</p>    
+      <p>Freelance Full Stack Web Developer for Front end and back end solutions.
+      I'm here to help you develop your business needs producing solid, responsive and interactive web and server end solutions. I have a experience building and improving apps by making UI and UX friendlier and more fluid always keeping in mind the final user. 
+      <br />
+      Please feel free to contact me, let's have a cup of tea and make conversation.</p>    
   </div>    
   <br />
   <div class="clearfix"></div>
-
+  <br />
   <div class="skill-lockup col-xs-10 col-sm-8 col-sm-offset-2"> 
     <h3>Skills</h3>
 
       <div class="skill-div col-xs-12 col-sm-6">
         <div class="skill-unit">
           <div class="skill-label"> Communication </div>
-            <span class="glyphicon glyphicon-star"></span><span class="glyphicon glyphicon-star"></span><span class="glyphicon glyphicon-star"></span><span class="glyphicon glyphicon-star"></span><span class="glyphicon glyphicon-star"></span><span class="glyphicon glyphicon-star"></span><span class="glyphicon glyphicon-star"></span><span class="glyphicon glyphicon-star-empty"></span><span class="glyphicon glyphicon-star-empty"></span><span class="glyphicon glyphicon-star-empty"></span>  
+            <span class="glyphicon glyphicon-star"></span><span class="glyphicon glyphicon-star"></span><span class="glyphicon glyphicon-star"></span><span class="glyphicon glyphicon-star"></span><span class="glyphicon glyphicon-star"></span><span class="glyphicon glyphicon-star"></span><span class="glyphicon glyphicon-star"></span><span class="glyphicon glyphicon-star"></span><span class="glyphicon glyphicon-star"></span><span class="glyphicon glyphicon-star-empty"></span>  
         </div>
 
         <div class="skill-unit">
@@ -79,7 +81,7 @@
 
         <div class="skill-unit">
           <div class="skill-label"> Teaching </div>
-            <span class="glyphicon glyphicon-star"></span><span class="glyphicon glyphicon-star"></span><span class="glyphicon glyphicon-star"></span><span class="glyphicon glyphicon-star"></span><span class="glyphicon glyphicon-star"></span><span class="glyphicon glyphicon-star"></span><span class="glyphicon glyphicon-star-empty"></span><span class="glyphicon glyphicon-star-empty"></span><span class="glyphicon glyphicon-star-empty"></span><span class="glyphicon glyphicon-star-empty"></span>  
+            <span class="glyphicon glyphicon-star"></span><span class="glyphicon glyphicon-star"></span><span class="glyphicon glyphicon-star"></span><span class="glyphicon glyphicon-star"></span><span class="glyphicon glyphicon-star"></span><span class="glyphicon glyphicon-star"></span><span class="glyphicon glyphicon-star"></span><span class="glyphicon glyphicon-star-empty"></span><span class="glyphicon glyphicon-star-empty"></span><span class="glyphicon glyphicon-star-empty"></span>  
         </div>
        </div> 
 
@@ -92,27 +94,27 @@
 
         <div class="skill-unit">
           <div class="skill-label"> Visual Design </div>
-            <span class="glyphicon glyphicon-star"></span><span class="glyphicon glyphicon-star"></span><span class="glyphicon glyphicon-star"></span><span class="glyphicon glyphicon-star"></span><span class="glyphicon glyphicon-star"></span><span class="glyphicon glyphicon-star"></span><span class="glyphicon glyphicon-star"></span><span class="glyphicon glyphicon-star"></span><span class="glyphicon glyphicon-star-empty"></span><span class="glyphicon glyphicon-star-empty"></span>  
+            <span class="glyphicon glyphicon-star"></span><span class="glyphicon glyphicon-star"></span><span class="glyphicon glyphicon-star"></span><span class="glyphicon glyphicon-star"></span><span class="glyphicon glyphicon-star"></span><span class="glyphicon glyphicon-star"></span><span class="glyphicon glyphicon-star"></span><span class="glyphicon glyphicon-star"></span><span class="glyphicon glyphicon-star"></span><span class="glyphicon glyphicon-star-empty"></span>  
         </div>
 
         <div class="skill-unit">
           <div class="skill-label"> UX desing </div>
-            <span class="glyphicon glyphicon-star"></span><span class="glyphicon glyphicon-star"></span><span class="glyphicon glyphicon-star"></span><span class="glyphicon glyphicon-star"></span><span class="glyphicon glyphicon-star"></span><span class="glyphicon glyphicon-star"></span><span class="glyphicon glyphicon-star"></span><span class="glyphicon glyphicon-star-empty"></span><span class="glyphicon glyphicon-star-empty"></span><span class="glyphicon glyphicon-star-empty"></span>  
+            <span class="glyphicon glyphicon-star"></span><span class="glyphicon glyphicon-star"></span><span class="glyphicon glyphicon-star"></span><span class="glyphicon glyphicon-star"></span><span class="glyphicon glyphicon-star"></span><span class="glyphicon glyphicon-star"></span><span class="glyphicon glyphicon-star"></span><span class="glyphicon glyphicon-star"></span><span class="glyphicon glyphicon-star-empty"></span><span class="glyphicon glyphicon-star-empty"></span>  
         </div>
 
         <div class="skill-unit">
           <div class="skill-label"> Programming </div>
-            <span class="glyphicon glyphicon-star"></span><span class="glyphicon glyphicon-star"></span><span class="glyphicon glyphicon-star"></span><span class="glyphicon glyphicon-star"></span><span class="glyphicon glyphicon-star"></span><span class="glyphicon glyphicon-star"></span><span class="glyphicon glyphicon-star"></span><span class="glyphicon glyphicon-star-empty"></span><span class="glyphicon glyphicon-star-empty"></span><span class="glyphicon glyphicon-star-empty"></span>  
+            <span class="glyphicon glyphicon-star"></span><span class="glyphicon glyphicon-star"></span><span class="glyphicon glyphicon-star"></span><span class="glyphicon glyphicon-star"></span><span class="glyphicon glyphicon-star"></span><span class="glyphicon glyphicon-star"></span><span class="glyphicon glyphicon-star"></span><span class="glyphicon glyphicon-star"></span><span class="glyphicon glyphicon-star-empty"></span><span class="glyphicon glyphicon-star-empty"></span>  
         </div>
        </div> 
   </div>      
 </section>  
 
-
   <%= yield %>
   <!--footer starts here -->
   <div class="clr"></div>
-
+<br />
+<br />
 <div id="footer">
   <br />   
   <form class="col-xs-5 col-xs-offset-1 form-horizontal">
@@ -120,11 +122,15 @@
         <div class="form-group" id="drop a line"> 
           <br /> 
           <label class="control-label" for"textarea">DROP ME A LINE</label><br /> 
-          <textarea class="form-control" id="textarea" name="textarea" rows="5" >...</textarea>
+          <textarea class="form-control" id="textarea" name="textarea" rows="1" >Your name</textarea>
+          <br /> 
+          <textarea class="form-control" id="textarea" name="textarea" rows="1" >Your email</textarea>
+          <br /> 
+          <textarea class="form-control" id="textarea" name="textarea" rows="5" >Message</textarea>
         </div>    
         <div class="form-group"> <!-- Button -->
           <label class="control-label" for="Sen email"></label>
-            <button id="Sen email" name="Sen email" class="btn btn-default btn-xs pull left">Send</button>
+            <button id="Sen email" name="Sen email" class="btn btn-default btn-xs pull-right">Send</button>
         </div>
     </fieldset>
   </form>
