More btn mods-2

--- a/app/assets/stylesheets/master.css.scss
+++ b/app/assets/stylesheets/master.css.scss
@@ -125,6 +125,7 @@ p {
 	font-family:"Helvetica Neue", Helvetica;
 	padding-top: 25px;
 	margin-top:30px;
+	padding-bottom: 25px;
 	font-weight:100;
 	-webkit-background-size: cover;
 	-moz-background-size: cover;
