--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -52,10 +52,10 @@
   </div> 
   <div class="col-xs-10 col-sm-8 col-sm-offset-2"> 
     <h3>Seb</h3>
-      <p>Freelance Full Stack Web Developer for Front end and back end solutions.
-      I'm here to help you develop your business needs producing solid, responsive and interactive web and server end solutions. I have a experience building and improving apps by making UI and UX friendlier and more fluid always keeping in mind the final user. 
+      <p>Freelance Full Stack Web Developer.
+      I'm here to help you develop your business needs producing solid, responsive and interactive front and server end solutions. I have a experience building and improving apps by making UI and UX friendlier and more fluid always keeping in mind the final user, I'm capable to produce simple yet powerful back end server solutions.
       <br />
-      Please feel free to contact me, let's have a cup of tea and make conversation.</p>    
+      Please feel free to contact me, I can answer all your questions @ e-mail.</p>    
   </div>    
   <br />
   <div class="clearfix"></div>
@@ -126,7 +126,7 @@
           <br /> 
           <textarea class="form-control" id="textarea" name="textarea" rows="1" >Your email</textarea>
           <br /> 
-          <textarea class="form-control" id="textarea" name="textarea" rows="5" >Message</textarea>
+          <textarea class="form-control" id="textarea" name="textarea" rows="5" >I'll be happy to answer all your questions, just use the box to contact me.</textarea>
         </div>    
         <div class="form-group"> <!-- Button -->
           <label class="control-label" for="Sen email"></label>
@@ -144,7 +144,6 @@
       <br />
       <%= image_tag 'github.png', class: 'social-button' %>
       <%= image_tag 'gmail.png', class: 'social-button' %>
-      <br />
  </div>  
 </div>  
 
