--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,7 +10,6 @@
 </head>
 <body>
 
-
 <header>
   <nav class="navbar navbar-inverse navbar-top" role="navigation">
     <div class="container-fluid"> 
@@ -31,29 +30,25 @@
   </nav>
   <div class="jumbotron">
     <div class="container col-sm-12 col-xs-12">
-    <h1>
-      I'm Seb
-    </h1> 
-    <br />
-    <h2> Full stack web developer </h2>
-      <i><span> Application builder </span></i>
+    <h1>Sebastian Bedout
+    <br />Full Stack Developer </h1>
    </div> 
   </div> 
 </header>
-
-  <br style="clr">
+<br style="clr">
 
 <section class="about col-sm-12 col-xs-12" id="about">
 <br />
   <div class="col-xs-10 col-sm-8 col-sm-offset-2 Seb">
     <div class="photo-of-me">
-      <img alt="cat" class="img-responsive img-thumbnail" src="assets/laid-cat.png">
+      <img alt="cat" class="img-responsive-circle" src="assets/laid-cat.png">
     </div>  
   </div> 
   <div class="col-xs-10 col-sm-8 col-sm-offset-2"> 
     <h3>Seb</h3>
       <p>Freelance Full Stack Web Developer.
-      I'm here to help you develop your business needs producing solid, responsive and interactive front and server end solutions. I have a experience building and improving apps by making UI and UX friendlier and more fluid always keeping in mind the final user, I'm capable to produce simple yet powerful back end server solutions.
+      I can help you develop your business needs producing solid, responsive and interactive front and server end solutions. 
+      I have a experience building and improving apps by making UI and UX friendlier and more fluid, I'm capable to produce simple yet powerful back end server solutions.
       <br />
       Please feel free to contact me, I can answer all your questions @ e-mail.</p>    
   </div>    
@@ -109,6 +104,9 @@
        </div> 
   </div>      
 </section>  
+
+
+
 
   <%= yield %>
   <!--footer starts here -->
