--- a/app/assets/stylesheets/master.css.scss
+++ b/app/assets/stylesheets/master.css.scss
@@ -1,31 +1,25 @@
 html, body {
-    margin:0;
-    padding:0;
-    -webkit-background-size: cover;
-		-moz-background-size: cover;
-		-o-background-size: cover;
-	  background-size: cover;
-	  height: 100%;
+  margin:0;
+  padding:0;
+  -webkit-background-size: cover;
+	-moz-background-size: cover;
+	-o-background-size: cover;
+  background-size: cover;
+  height: 100%;
 }
 
 header {
 	background: url('51H.jpg') no-repeat center fixed;
-	height: 800px;
+	height: 700px;
 	-webkit-background-size: cover;
 	-moz-background-size: cover;
 	-o-background-size: cover;
   background-size: cover;
 }
 
-.navbar-inverse {
-	padding-left: 45px;
-	padding-right: 65px;
-}
-
-
 #navbar-collapse{
 	border-color: #fff;
-
+	margin-left: -30px;
 }
 
 
@@ -41,10 +35,9 @@ p {
 }
 
 .navbar.navbar-inverse {
-		background-color: transparent;
-	  border:0px;
-	  border-radius: 0;  
-    padding-top:35px;
+	background-color: transparent;
+  border:0px; 
+  padding-top:35px;
 } 
 
 .navbar-toggle {
@@ -56,17 +49,13 @@ p {
 	background-color: transparent;
 	border:0px;
 	background: none;
-
-
 }
 
 .navbar-inverse .navbar-toggle:hover,
 .navbar-inverse .navbar-toggle:focus {
-	 background:transparent;
-   border-color: #616161;
-   border: 1px solid #fff;
-   border-radius: 0px;
-
+ background:transparent;
+ border-color: #616161;
+ border-radius: 0px;
 }
 
 .jumbotron {
@@ -77,21 +66,9 @@ p {
 }
 
 .jumbotron h1 {
-		font-family: 'blackjackregular';
-		font-size: 125px;
-		text-shadow: 5px 5px #000000;
-		text-transform: -45deg;
-}
-
-.jumbotron span {
-	font-size: 35px;
-	font-style: bold;
-	text-shadow: 1px 1px #000000;
-}
-
-.jumbotron h2 {
-	font-size: 45px;
-	text-shadow: 1px 1px #000000;
+	font-family: 'blackjackregular';
+	text-shadow: 4px 4px #000000;
+	font-size: 75px;
 }
 
 .photo-of-me {
@@ -109,7 +86,7 @@ p {
 
 .glyphicon {
 	font-size: 1.35em;
-	color: #E18728;
+	color: #4E4E4E;
 }
 
 .about {
@@ -130,7 +107,6 @@ p {
 	-webkit-background-size: cover;
 	-moz-background-size: cover;
 	-o-background-size: cover;
-	/*background: url('51H.jpg') no-repeat center fixed;*/
 	background-size: cover;
 	overflow: hidden;
 }
@@ -147,72 +123,42 @@ p {
 }
 
 .clr{
-    width:100%;
-    height:0px;
-    clear:both;
+  width:100%;
+  height:0px;
+  clear:both;
 }
 
 .btn {
-    padding: 14px 24px;
-    font-weight: 700;
-    letter-spacing: 1px;
-    text-transform: uppercase;
-    border-radius:0px;
-    background: none;
-    padding: 12px 22px;
-    border: 1px solid #fff;
-    color: #fff;
-    margin-bottom: 5px;
+	padding: 14px 24px;
+	font-weight: 700;
+	letter-spacing: 1px;
+	text-transform: uppercase;
+	border-radius:0px;
+	background: none;
+	border: 1px solid #fff;
+	color: #fff;
+	margin-bottom: 5px;
+	 
 }
  
-.btn:focus, .btn:active:focus, .btn.active:focus {
-    outline: 0 none;
-}
- 
-.btn-primary {
-    color: #31B0D5;
-}
- 
-.btn-primary:hover, .btn-primary:focus, .btn-primary:active, .btn-primary.active, .open > .dropdown-toggle.btn-primary {
-    background: #31B0D5;
-    border-color: #31B0D5;
-}
- 
-.btn-primary:active, .btn-primary.active {
-    background: #31B0D5;
-    color: #31B0D5;
-    box-shadow: none;
-}
-
 .btn-1 {
-    padding: 14px 24px;
-    font-weight: 700;
-    letter-spacing: 1px;
-    text-transform: uppercase;
-    border-radius:0px;
-    background: none;
-    padding: 12px 22px;
-    border: 0px solid #fff;
-    color: #fff;
-    margin-bottom: 5px;
+  font-weight: 700;
+  letter-spacing: 2px;
+  text-transform: uppercase;
+  background: none;
+  border: 0px solid #fff;
+  color: #fff;
+  transition: all 0.5s;  
+  display: inline-block;
 }
+  
+.btn-1:hover{
+	text-shadow: 0px 6px 2px rgba(0,0,0,0.5);
+	letter-spacing: 5px;
+	font-size: 1.15em;
+}  
  
-.btn-1:focus, .btn-1:active:focus, .btn-1.active:focus {
-    outline: 0 none;
-}
+
  
-.btn-1-primary {
-    color: #31B0D5;
-}
- 
-.btn-1-primary:hover, .btn-1-primary:focus, .btn-1-primary:active, .btn-1-primary.active, .open > .dropdown-toggle.btn-1-primary {
-    background: #31B0D5;
-    border-color: #31B0D5;
-}
- 
-.btn-1-primary:active, .btn-1-primary.active {
-    background: #31B0D5;
-    color: #31B0D5;
-    box-shadow: none;
-}
+
 
