--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -37,25 +37,25 @@
 </header>
 <br style="clr">
 
-<section class="about col-sm-12 col-xs-12" id="about">
+<section class="about col-xs-12" id="about">
 <br />
-  <div class="col-xs-10 col-sm-8 col-sm-offset-2 Seb">
+  <div class="col-xs-12 Seb">
     <div class="photo-of-me">
       <img alt="cat" class="img-responsive-circle" src="assets/laid-cat.png">
     </div>  
   </div> 
-  <div class="col-xs-10 col-sm-8 col-sm-offset-2"> 
+  <div class="col-xs-12"> 
     <h3>Seb</h3>
-      <p>Freelance Full Stack Web Developer.
-      I can help you develop your business needs producing solid, responsive and interactive front and server end solutions. <br />
-      I have a experience building and improving apps by making UI and UX friendlier and more fluid, I'm capable to produce simple yet powerful back end server solutions.
-      <br />
-      Please feel free to contact me, I can answer all your questions @ e-mail.</p>    
+      <div class="col-xs-12 col-sm-8 col-sm-offset-2">
+        <p>Freelance Full Stack Web Developer.<br/>
+      I have a experience building and improving apps by making UI and UX friendlier and more and I'm capable to produce simple yet powerful back end server solutions.
+      I can help you develop your business producing solid, responsive and interactive front and server end solutions. <br />
+      Please feel free to contact me, I can answer all your questions @ e-mail.</p></div>  
   </div>    
   <br />
   <div class="clearfix"></div>
   <br />
-  <div class="skill-lockup col-xs-10 col-sm-8 col-sm-offset-2"> 
+  <div class="skill-lockup col-xs-12"> 
     <h3>Skills</h3>
 
       <div class="skill-div col-xs-12 col-sm-6">
@@ -103,24 +103,34 @@
         </div>
        </div> 
   </div>  
-
 <br />
-<div class="clearfix"></div>
 <br />    
-
 </section>  
+<div class="clr"></div>
+<div class="col-xs-12 text-center">
+  <h3>Portfolio</h3>
+</div>
+<div class="clr"></div>
 
-<section class="gallery col-sm-12 col-xs-12" id="gallery">
-
-
-
-
+<section id="gallery">
+  <div class="container-fluid">
+    <div class="row no-gutter"> 
+      <div class="col-xs-12 col-sm-6 col-lg-3">no gutter</div>
+      <div class="col-xs-12 col-sm-6 col-lg-3">no gutter</div>
+      <div class="col-xs-12 col-sm-6 col-lg-3">no gutter</div>
+      <div class="col-xs-12 col-sm-6 col-lg-3">no gutter</div>
+      <div class="col-xs-12 col-sm-6 col-lg-3">no gutter</div>
+      <div class="col-xs-12 col-sm-6 col-lg-3">no gutter</div>
+      <div class="col-xs-12 col-sm-6 col-lg-3">no gutter</div>
+      <div class="col-xs-12 col-sm-6 col-lg-3">no gutter</div>
+    </div>
+  </div>
 </section>
   
 
   <%= yield %>
   <!--footer starts here -->
-  <div class="clr"></div>
+<div class="clr"></div>
 <br />
 <br />
 <div id="footer">
