--- a/app/assets/stylesheets/master.css.scss
+++ b/app/assets/stylesheets/master.css.scss
@@ -10,7 +10,7 @@ html, body {
 
 header {
 	background: url('51H.jpg') no-repeat center fixed;
-	height: 700px;
+	height: 650px;
 	-webkit-background-size: cover;
 	-moz-background-size: cover;
 	-o-background-size: cover;
@@ -34,8 +34,19 @@ p {
 	font-weight: 100;
 }
 
+.firstcharacter { 
+	color: #515151; 
+	font-size: 75px; 
+	line-height: 10px; 
+	font-family: Georgia; 
+}
+
 h2 {
 	text-align: center;
+}
+
+h3 { 
+	font-size: 26px;
 }
 
 .navbar.navbar-inverse {
@@ -84,7 +95,7 @@ h2 {
 }
 
 .skill-label {
-	font-size: 24px;
+	font-size: 22px;
 	font-weight: 100;
 }
 
@@ -100,11 +111,12 @@ h2 {
 
 
 #footer {
-	height:675px;
+	height:auto;
 	color:white;
 	background-color: rgba(36,32,33,0.9);
 	font-family:"Helvetica Neue", Helvetica;
 	padding-top: 20px;
+	padding-bottom: 20px;
 	font-weight:100;
 	-webkit-background-size: cover;
 	-moz-background-size: cover;
@@ -161,10 +173,10 @@ h2 {
 .btn-1:hover{
 	text-shadow: 0px 6px 2px rgba(0,0,0,0.5);
 	letter-spacing: 5px;
-	font-size: 1.15em;
+	font-size: 1.25em;
 }  
 
-.row [class*="-6"] {
+.row {
    /* the following is just used to show grid*/
 	background-color:#eee;
 }
