--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -47,9 +47,8 @@
   <div class="col-xs-12"> 
     <h3>Seb</h3>
       <div class="col-xs-12 col-sm-8 col-sm-offset-2">
-        <p>Freelance Full Stack Web Developer.<br/>
-      I have a experience building and improving apps by making UI and UX friendlier and more and I'm capable to produce simple yet powerful back end server solutions.
-      I can help you develop your business producing solid, responsive and interactive front and server end solutions. <br />
+      <p><span class="firstcharacter">I'</span>m a freelance Full Stack Web Developer, with experience building and improving UI and UX using friendly and beautiful interfaces. 
+      I can help you develop your business producing solid, responsive and interactive front desings with simple yet powerful back end server solutions for data driven application. <br />
       Please feel free to contact me, I can answer all your questions @ e-mail.</p></div>  
   </div>    
   <br />
@@ -135,8 +134,7 @@
 <br />
 <div id="footer">
  <div class="container"> 
-  <h2> CONTACT ME </h2>
-  <br />   
+  <h2> CONTACT ME </h2> 
   <form class="col-xs-12 col-sm-6 form-horizontal">
     <fieldset>
         <div class="form-group" id="drop a line"> 
@@ -144,9 +142,9 @@
           <br />
           <textarea class="form-control" id="textarea" name="textarea" rows="1" >Your name</textarea>
           <br /> 
-          <textarea class="form-control" id="textarea" name="textarea" rows="1" >Your email</textarea>
+          <textarea class="form-control" id="textarea" name="textarea" rows="1" >Your E-mail</textarea>
           <br /> 
-          <textarea class="form-control" id="textarea" name="textarea" rows="5" >I'll be happy to answer all your questions, just use this box to contact me.</textarea>
+          <textarea class="form-control" id="textarea" name="textarea" rows="5" >I'll be happy to answer all your questions, just use this box to write</textarea>
         </div>    
         <div class="form-group"> <!-- Button -->
           <label class="control-label" for="Send email"></label>
@@ -157,12 +155,12 @@
 
     <div class="esquina col-xs-12 col-sm-5 col-sm-offset-1">
       <br />
-      <span>Feel free to <b>ASK</b> me
+      <span>Feel free to <b>ASK ME</b> any question about freelancing your project.
       <br />
       <br />
       E-mail: coustum@mail.com
       <br />
-      Address: Montreal, Quebec, Canada
+      Located in: Montreal Metro Area, Quebec
       <br />
       <br />
       <b>Social:</b>
