--- a/app/assets/stylesheets/master.css.scss
+++ b/app/assets/stylesheets/master.css.scss
@@ -20,6 +20,7 @@ header {
 #navbar-collapse{
 	border-color: #fff;
 	margin-left: -30px;
+	overflow: hidden;
 }
 
 
@@ -41,29 +42,24 @@ p {
 	font-family: Georgia; 
 }
 
-h2 {
-	text-align: center;
-}
-
-h3 { 
-	font-size: 26px;
-}
-
 .navbar.navbar-inverse {
 	background-color: transparent;
   border:0px; 
   padding-top:35px;
+ 
 } 
 
 .navbar-toggle {
 	float: none;
 	background: transparent;
+
 }
 
 .navbar-inverse .navbar-toggle {
 	background-color: transparent;
 	border:0px;
 	background: none;
+
 }
 
 .navbar-inverse .navbar-toggle:hover,
@@ -80,35 +76,48 @@ h3 {
   margin-top: 0%
 }
 
-.jumbotron h1 {
+.jumbotron h2 {
 	font-family: 'blackjackregular';
 	text-shadow: 4px 4px #000000;
-	font-size: 75px;
+	font-size: 65px;
 }
 
-.photo-of-me {
-	text-align: center;
-}
-
-#skills {
-	text-align: center;
-}
-
-.skill-label {
-	font-size: 22px;
-	font-weight: 100;
-}
-
-.glyphicon {
-	font-size: 1.35em;
-	color: #4E4E4E;
-}
+.gi-2x{font-size: 2em;}
+.gi-3x{font-size: 3em;}
+.gi-4x{font-size: 4em;}
+.gi-5x{font-size: 5em;}
 
 .about {
 	text-align: center;
-	padding: 0 50px;
+	margin: 0;
+	padding: 0;
 }
 
+.about-me {
+	padding: 2em 1em 1em 1em;
+}
+
+.skill-unit {
+	font-weight: 100;
+	font-size:22px;
+}
+
+.progress {
+	margin: 0.5em 1.5em 0.5em 1.5em;
+}
+
+.portfolio {
+	margin: 2em 1em 2em 1em;
+}
+
+.social-button {
+	width: 25px;
+	margin:5px;
+}
+
+.clr{
+  clear:both;
+}
 
 #footer {
 	height:auto;
@@ -125,19 +134,8 @@ h3 {
 	overflow: hidden;
 }
 
-.social-button {
-	width: 25px;
-	margin:5px;
-}
-
-.clr{
-  width:100%;
-  height:0px;
-  clear:both;
-}
-
 .esquina {
-	padding-top: 15px;
+	padding: 1em 1em 1em 1em;
 	
 }
 
@@ -170,27 +168,9 @@ h3 {
   display: inline-block;
 }
   
-.btn-1:hover{
-	text-shadow: 0px 6px 2px rgba(0,0,0,0.5);
-	letter-spacing: 5px;
-	font-size: 1.25em;
+.btn-1:hover {
+	text-shadow: 0px 5px 2px rgba(0,0,0,0.5);
+	letter-spacing: 4px;
+	font-size: 1.1em;
 }  
-
-.row {
-   /* the following is just used to show grid*/
-	background-color:#eee;
-}
-
-
-.no-gutter {
-	padding-left:0;
-	padding-right:0;
-}
-
- 
- 
-
-
- 
-
 
