--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -30,8 +30,8 @@
   </nav>
   <div class="jumbotron">
     <div class="container col-sm-12 col-xs-12">
-    <h1>Sebastian B
-    <br />Full Stack Developer </h1>
+    <h2> Hello, I'm Sebastian 
+    <br />WEBDeveloper </h2>
    </div> 
   </div> 
 </header>
@@ -39,90 +39,123 @@
 
 <section class="about col-xs-12" id="about">
 <br />
-  <div class="col-xs-12 Seb">
-    <div class="photo-of-me">
-      <img alt="cat" class="img-responsive-circle" src="assets/laid-cat.png">
+  <div class="container-fluid">
+    <div class="col-xs-12 photo-of-me seb">
+      <img alt="cat" class="img-responsive-circle" src="assets/web2.png">
     </div>  
   </div> 
   <div class="col-xs-12"> 
-    <h3>Seb</h3>
-      <div class="col-xs-12 col-sm-8 col-sm-offset-2">
-      <p><span class="firstcharacter">I'</span>m a freelance Full Stack Web Developer, with experience building and improving UI and UX using friendly and beautiful interfaces. 
-      I can help you develop your business producing solid, responsive and interactive front desings with simple yet powerful back end server solutions for data driven application. <br />
-      Please feel free to contact me, I can answer all your questions @ e-mail.</p></div>  
+      <div class="col-xs-10 col-xs-offset-1 about-me">
+      <p><span class="firstcharacter">I'</span>m a freelance Full Stack Web Developer, expirenced app builder, passionate UX and UI designer. <br />
+      I love responsive web design and simple powerful server-end solutions. <br />
+      I can help you develop your business please feel free to contact me, I will be happy to answer all your questions @ e-mail.</p></div>  
   </div>    
   <br />
-  <div class="clearfix"></div>
+   <div class="clr"></div>
   <br />
-  <div class="skill-lockup col-xs-12"> 
-    <h3>Skills</h3>
+  <div class="skill-lockup col-xs-12 col-sm-10 col-sm-offset-1 text-center"> 
+    <h3>Skills</h3><br />
+    <div class="clr"></div>
 
-      <div class="skill-div col-xs-12 col-sm-6">
-        <div class="skill-unit">
-          <div class="skill-label"> Communication </div>
-            <span class="glyphicon glyphicon-star"></span><span class="glyphicon glyphicon-star"></span><span class="glyphicon glyphicon-star"></span><span class="glyphicon glyphicon-star"></span><span class="glyphicon glyphicon-star"></span><span class="glyphicon glyphicon-star"></span><span class="glyphicon glyphicon-star"></span><span class="glyphicon glyphicon-star"></span><span class="glyphicon glyphicon-star"></span><span class="glyphicon glyphicon-star-empty"></span>  
-        </div>
+      <div class="skill-div-1 col-xs-12 col-sm-6">
 
-        <div class="skill-unit">
+       <div class="skill-unit">
           <div class="skill-label"> Organization </div>
-            <span class="glyphicon glyphicon-star"></span><span class="glyphicon glyphicon-star"></span><span class="glyphicon glyphicon-star"></span><span class="glyphicon glyphicon-star"></span><span class="glyphicon glyphicon-star"></span><span class="glyphicon glyphicon-star"></span><span class="glyphicon glyphicon-star"></span><span class="glyphicon glyphicon-star"></span><span class="glyphicon glyphicon-star-empty"></span><span class="glyphicon glyphicon-star-empty"></span>  
-        </div>
+            <div class="progress">
+              <div class="progress-bar progress-bar-info progress-bar-striped active" role="progressbar" aria-valuenow="45" aria-valuemin="0" aria-valuemax="100" style="width: 80%">
+              </div>
+            </div>
+          </div>        
 
-        <div class="skill-unit">
+       <div class="skill-unit">
           <div class="skill-label"> Learning </div>
-            <span class="glyphicon glyphicon-star"></span><span class="glyphicon glyphicon-star"></span><span class="glyphicon glyphicon-star"></span><span class="glyphicon glyphicon-star"></span><span class="glyphicon glyphicon-star"></span><span class="glyphicon glyphicon-star"></span><span class="glyphicon glyphicon-star"></span><span class="glyphicon glyphicon-star"></span><span class="glyphicon glyphicon-star"></span><span class="glyphicon glyphicon-star"></span>  
-        </div>
+            <div class="progress">
+              <div class="progress-bar progress-bar-info progress-bar-striped active" role="progressbar" aria-valuenow="45" aria-valuemin="0" aria-valuemax="100" style="width: 100%">
+              </div>
+            </div>
+          </div>
 
-        <div class="skill-unit">
+       <div class="skill-unit">
           <div class="skill-label"> Teaching </div>
-            <span class="glyphicon glyphicon-star"></span><span class="glyphicon glyphicon-star"></span><span class="glyphicon glyphicon-star"></span><span class="glyphicon glyphicon-star"></span><span class="glyphicon glyphicon-star"></span><span class="glyphicon glyphicon-star"></span><span class="glyphicon glyphicon-star"></span><span class="glyphicon glyphicon-star-empty"></span><span class="glyphicon glyphicon-star-empty"></span><span class="glyphicon glyphicon-star-empty"></span>  
-        </div>
-       </div> 
+            <div class="progress">
+              <div class="progress-bar progress-bar-info progress-bar-striped active" role="progressbar" aria-valuenow="45" aria-valuemin="0" aria-valuemax="100" style="width: 65%">
+              </div>
+            </div>
+          </div>
 
-
-      <div class="skill-div col-xs-12 col-sm-6">
-        <div class="skill-unit">
-          <div class="skill-label"> Planning </div>
-            <span class="glyphicon glyphicon-star"></span><span class="glyphicon glyphicon-star"></span><span class="glyphicon glyphicon-star"></span><span class="glyphicon glyphicon-star"></span><span class="glyphicon glyphicon-star"></span><span class="glyphicon glyphicon-star"></span><span class="glyphicon glyphicon-star"></span><span class="glyphicon glyphicon-star-empty"></span><span class="glyphicon glyphicon-star-empty"></span><span class="glyphicon glyphicon-star-empty"></span>  
-        </div>
-
-        <div class="skill-unit">
+       <div class="skill-unit">
           <div class="skill-label"> Visual Design </div>
-            <span class="glyphicon glyphicon-star"></span><span class="glyphicon glyphicon-star"></span><span class="glyphicon glyphicon-star"></span><span class="glyphicon glyphicon-star"></span><span class="glyphicon glyphicon-star"></span><span class="glyphicon glyphicon-star"></span><span class="glyphicon glyphicon-star"></span><span class="glyphicon glyphicon-star"></span><span class="glyphicon glyphicon-star"></span><span class="glyphicon glyphicon-star-empty"></span>  
-        </div>
+            <div class="progress">
+              <div class="progress-bar progress-bar-info progress-bar-striped active" role="progressbar" aria-valuenow="45" aria-valuemin="0" aria-valuemax="100" style="width: 90%">
+              </div>
+            </div>
+          </div>
+      </div>      
 
-        <div class="skill-unit">
-          <div class="skill-label"> UX desing </div>
-            <span class="glyphicon glyphicon-star"></span><span class="glyphicon glyphicon-star"></span><span class="glyphicon glyphicon-star"></span><span class="glyphicon glyphicon-star"></span><span class="glyphicon glyphicon-star"></span><span class="glyphicon glyphicon-star"></span><span class="glyphicon glyphicon-star"></span><span class="glyphicon glyphicon-star"></span><span class="glyphicon glyphicon-star-empty"></span><span class="glyphicon glyphicon-star-empty"></span>  
-        </div>
+      <div class="skill-div-2 col-xs-12 col-sm-6">
 
-        <div class="skill-unit">
+       <div class="skill-unit">
+          <div class="skill-label"> UX Desing </div>
+            <div class="progress">
+              <div class="progress-bar progress-bar-info progress-bar-striped active" role="progressbar" aria-valuenow="45" aria-valuemin="0" aria-valuemax="100" style="width: 85%">
+              </div>
+            </div>
+          </div>        
+
+       <div class="skill-unit">
+          <div class="skill-label"> Communication </div>
+            <div class="progress">
+              <div class="progress-bar progress-bar-info progress-bar-striped active" role="progressbar" aria-valuenow="45" aria-valuemin="0" aria-valuemax="100" style="width: 78%">
+              </div>
+            </div>
+          </div>
+
+       <div class="skill-unit">
+          <div class="skill-label"> UI Desing </div>
+            <div class="progress">
+              <div class="progress-bar progress-bar-info progress-bar-striped active" role="progressbar" aria-valuenow="45" aria-valuemin="0" aria-valuemax="100" style="width: 90%">
+              </div>
+            </div>
+          </div>
+
+       <div class="skill-unit">
           <div class="skill-label"> Programming </div>
-            <span class="glyphicon glyphicon-star"></span><span class="glyphicon glyphicon-star"></span><span class="glyphicon glyphicon-star"></span><span class="glyphicon glyphicon-star"></span><span class="glyphicon glyphicon-star"></span><span class="glyphicon glyphicon-star"></span><span class="glyphicon glyphicon-star"></span><span class="glyphicon glyphicon-star"></span><span class="glyphicon glyphicon-star-empty"></span><span class="glyphicon glyphicon-star-empty"></span>  
-        </div>
-       </div> 
-  </div>  
-<br />
-<br />    
+            <div class="progress">
+              <div class="progress-bar progress-bar-info progress-bar-striped active" role="progressbar" aria-valuenow="45" aria-valuemin="0" aria-valuemax="100" style="width: 80%">
+              </div>
+            </div>
+          </div>
+          <br />
+          <br /> 
+      </div>       
+      <h3>Works</h3> 
+      <br />
+      <br /> 
+  </div>     
 </section>  
-<div class="clr"></div>
-<div class="col-xs-12 text-center">
-  <h3>Portfolio</h3>
-</div>
-<div class="clr"></div>
+ <div class="clr"></div>
 
-<section id="gallery">
-  <div class="container-fluid">
-    <div class="row no-gutter"> 
-      <div class="col-xs-12 col-sm-6 col-lg-3">no gutter</div>
-      <div class="col-xs-12 col-sm-6 col-lg-3">no gutter</div>
-      <div class="col-xs-12 col-sm-6 col-lg-3">no gutter</div>
-      <div class="col-xs-12 col-sm-6 col-lg-3">no gutter</div>
-      <div class="col-xs-12 col-sm-6 col-lg-3">no gutter</div>
-      <div class="col-xs-12 col-sm-6 col-lg-3">no gutter</div>
-      <div class="col-xs-12 col-sm-6 col-lg-3">no gutter</div>
-      <div class="col-xs-12 col-sm-6 col-lg-3">no gutter</div>
+<section id="gallery col xs-12">
+  
+  <div class="container">
+
+    <div class="experience-unit col-xs-12 col-sm-11 col-sm-offset-1">
+      <div class="col-xs-12 col-sm-5">
+        <p>aca pongo una imagen</p>
+      </div>  
+      <div class="col-xs-12 col-sm-7">
+        <p>aca pongo un contenido con algun link en un boton</p>
+      </div>
     </div>
+    <div class="experience-unit col-xs-12 col-sm-11 col-sm-offset-1">
+      <div class="col-xs-12 col-sm-7">
+        <p>aca pongo un contenido con algun link en un boton</p>
+      </div>  
+      <div class="col-xs-12 col-sm-5">
+        <p>aca pongo una imagen</p>
+      </div>
+    </div>  
+
   </div>
 </section>
   
