--- a/app/assets/stylesheets/master.css.scss
+++ b/app/assets/stylesheets/master.css.scss
@@ -6,6 +6,7 @@ html, body {
 	-o-background-size: cover;
   background-size: cover;
   height: 100%;
+  font-family: "Courier New", Courier, monospace
 }
 
 header {
@@ -23,15 +24,18 @@ header {
 	overflow: hidden;
 }
 
+h3 {
+	font-weight: 700;
+}
 
 a {
-	margin-left:15px;
+	margin-left:1em;
 }
 
 p { 
+	margin: 1em 0 1em 0;
 	font-size: 22px;
 	font-style: sans-serif;	
-	font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
 	font-weight: 100;
 }
 
@@ -52,14 +56,12 @@ p {
 .navbar-toggle {
 	float: none;
 	background: transparent;
-
 }
 
 .navbar-inverse .navbar-toggle {
 	background-color: transparent;
 	border:0px;
 	background: none;
-
 }
 
 .navbar-inverse .navbar-toggle:hover,
@@ -73,7 +75,6 @@ p {
   background-color: transparent;
   color: white;
   text-align: center;
-  margin-top: 0%
 }
 
 .jumbotron h2 {
@@ -104,10 +105,19 @@ p {
 
 .progress {
 	margin: 0.5em 1.5em 0.5em 1.5em;
+	height: 10px;	
 }
 
-.portfolio {
-	margin: 2em 1em 2em 1em;
+.experience-unit {
+	margin: 2em 1em 3em 1em;
+}
+
+.experience-unit p {
+	margin-bottom: 1em;
+}
+
+.lady-look {
+	text-align:right;
 }
 
 .social-button {
@@ -123,7 +133,6 @@ p {
 	height:auto;
 	color:white;
 	background-color: rgba(36,32,33,0.9);
-	font-family:"Helvetica Neue", Helvetica;
 	padding-top: 20px;
 	padding-bottom: 20px;
 	font-weight:100;
@@ -136,29 +145,40 @@ p {
 
 .esquina {
 	padding: 1em 1em 1em 1em;
-	
 }
 
 .esquina span {
 	font-size: 18px
 }
 
+.foto {
+	padding: 1em 1em 1em 1em;
+}
+
+.foto span {
+	font-size: 18px
+}
+
 .btn-2 {
-	padding: 10px 15px 10px 15px;
+	padding: 0.5em 1em 0.5em 1em;
 	font-weight: 700;
 	letter-spacing: 1px;
-	text-transform: uppercase;
-	border-radius:0px;
+	border-radius:5px;
 	background: none;
-	border: 1px solid #fff;
-	color: #fff; 
-	width: 120px;
-	display: block;
+	border: 2px solid #5BC0DE;
+	color: #111; 
+}
+
+.btn-2:hover {
+	background: none;
+	text-decoration: none;
+	border: 3px solid #5BC0DE;
 }
  
 .btn-1 {
 	padding: 14px 24px;
   font-weight: 700;
+  font-size: 18px;
   letter-spacing: 2px;
   text-transform: uppercase;
   background: none;
@@ -167,10 +187,10 @@ p {
   transition: all 0.5s;  
   display: inline-block;
 }
-  
+
 .btn-1:hover {
 	text-shadow: 0px 5px 2px rgba(0,0,0,0.5);
 	letter-spacing: 4px;
-	font-size: 1.1em;
+	font-size: 1.25em;
 }  
 
