--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -48,7 +48,7 @@
       <div class="col-xs-10 col-xs-offset-1 about-me">
       <p><span class="firstcharacter">I'</span>m a freelance Full Stack Web Developer, expirenced app builder, passionate UX and UI designer. <br />
       I love responsive web design and simple powerful server-end solutions. <br />
-      I can help you develop your business please feel free to contact me, I will be happy to answer all your questions @ e-mail.</p></div>  
+      Please feel free to contact me, I will be happy to answer all your questions @ e-mail.</p></div>  
   </div>    
   <br />
    <div class="clr"></div>
@@ -128,7 +128,7 @@
           <br />
           <br /> 
       </div>       
-      <h3>Works</h3> 
+      <h3>Work</h3> 
       <br />
       <br /> 
   </div>     
@@ -137,21 +137,24 @@
 
 <section id="gallery col xs-12">
   
-  <div class="container">
+  <div class="container-fluid">
 
-    <div class="experience-unit col-xs-12 col-sm-11 col-sm-offset-1">
-      <div class="col-xs-12 col-sm-5">
+    <div class="experience-unit col-xs-12">
+      <div class="col-xs-12 col-sm-5 firehose-look">
         <p>aca pongo una imagen</p>
       </div>  
-      <div class="col-xs-12 col-sm-7">
-        <p>aca pongo un contenido con algun link en un boton</p>
+      <div class="col-xs-12 col-sm-7 firehose-tell">
+        <p>Completed Bootcamp Firehose Project it was a wonderful experince that open my eyes to the world of web development. Ruby on rails database driven apps are my main focus. I'm learning all the things I can get my hands on.<p>
+        <%= link_to 'Whole story', '#', :class => 'btn-2 btn-default btn-lg pull-left' %>
       </div>
     </div>
-    <div class="experience-unit col-xs-12 col-sm-11 col-sm-offset-1">
-      <div class="col-xs-12 col-sm-7">
-        <p>aca pongo un contenido con algun link en un boton</p>
+
+    <div class="experience-unit col-xs-12">
+      <div class="col-xs-12 col-sm-7 lady-tell">
+        <p>Lady vudu, is a music band from the underbelly, I helped them deveolp a presence on the grid, a responsive website with large graphical content pushed higher by the artisitic abilities of the band</p>
+        <%= link_to 'Whole Story', '#', :class => 'btn-2 btn-default btn-lg' %>
       </div>  
-      <div class="col-xs-12 col-sm-5">
+      <div class="col-xs-12 col-sm-5 lady-look">
         <p>aca pongo una imagen</p>
       </div>
     </div>  
@@ -167,42 +170,22 @@
 <br />
 <div id="footer">
  <div class="container"> 
-  <h2> CONTACT ME </h2> 
-  <form class="col-xs-12 col-sm-6 form-horizontal">
-    <fieldset>
-        <div class="form-group" id="drop a line"> 
-          <label class="control-label" for"textarea"></label><br /> 
-          <br />
-          <textarea class="form-control" id="textarea" name="textarea" rows="1" >Your name</textarea>
-          <br /> 
-          <textarea class="form-control" id="textarea" name="textarea" rows="1" >Your E-mail</textarea>
-          <br /> 
-          <textarea class="form-control" id="textarea" name="textarea" rows="5" >I'll be happy to answer all your questions, just use this box to write</textarea>
-        </div>    
-        <div class="form-group"> <!-- Button -->
-          <label class="control-label" for="Send email"></label>
-            <button id="Send email" name="Send email" class="btn-2 btn-default btn-xs pull-right">Send</button>
-        </div>
-    </fieldset>
-  </form>
-
-    <div class="esquina col-xs-12 col-sm-5 col-sm-offset-1">
+    <div class="esquina col-xs-12 col-sm-6">
+      <span>Seb -  Web Developer</span><br />
+      <span>I like technology and things that help us have a simpler life.</span>
       <br />
+      <span>E-mail: coustum@mail.com</span>       
+    </div>  
+    <div class="foto col-xs-12 col-sm-5 col-sm-offset-1">
       <span>Feel free to <b>ASK ME</b> any question about freelancing your project.
-      <br />
-      <br />
-      E-mail: coustum@mail.com
       <br />
       Located in: Montreal Metro Area, Quebec
       <br />
-      <br />
-      <b>Social:</b>
+      <b>Find me:</b>
       <br /></span>
       <%= image_tag 'github.png', :class => 'social-button' %>
-      <%= image_tag 'gmail.png', :class => 'social-button' %>
-    </div>
-  </div>  
- </div>   
+      <%= image_tag 'gmail.png', :class => 'social-button' %>    
+  </div>   
 </div> 
   
 
