Romoved extra fonts

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -47,9 +47,9 @@
   </div> 
   <div class="col-xs-12"> 
       <div class="col-xs-10 col-xs-offset-1 about-me">
-      <p><span class="firstcharacter">I'</span>m a freelance Full Stack Web Developer, expirenced app builder, passionate UX and UI designer. <br />
-      I love responsive web design and simple powerful server-end solutions. <br />
-      Please feel free to contact me, I will be happy to answer all your questions @ e-mail.</p></div>  
+      <p><span class="firstcharacter">I'</span>m a freelance Web Developer, expirenced app builder, passionate UX and UI designer. 
+      I love responsive web design and simple powerful server-end solutions.
+      Please feel free to contact me, I will be happy to answer all your questions about freelancing your project @ e-mail.</p></div>  
   </div>    
   <br />
    <div class="clr"></div>
@@ -130,27 +130,25 @@
           <br /> 
       </div>       
       <h3>Work</h3> 
-      <br />
   </div>     
 </section>  
 <div class="clr"></div>
 
 <section id="work col xs-12">
   <div class="container-fluid">
-
     <div class="experience-unit col-xs-12">
       <div class="col-xs-12 col-sm-4 firehose-look">
         <p>Aca pongo una imagen</p>
       </div>  
       <div class="col-xs-12 col-sm-8 firehose-tell">
-        <p>Completed Bootcamp Firehose Project it was a wonderful experince that open my eyes to the world of web development. Ruby on rails database driven apps are my main focus. I'm learning all the things I can get my hands on.<p>
+        <p>Completed Bootcamp @Firehose Project. It was a wonderful experince that open my eyes to the world of web development. Got my hands dirty constructing with Ruby on Rails a bunch of different database driven apps and usign collaborative tools as main focus.<p>
         <%= link_to 'Whole story', '#', :class => 'btn-2 btn-default btn-lg' %>
       </div>
     </div>
 
     <div class="experience-unit col-xs-12">
       <div class="col-xs-12 col-sm-8 lady-tell">
-        <p>Lady vudu, is a music band from the underbelly, I helped them deveolp a presence on the grid, a responsive website with large graphical content pushed higher by the artisitic abilities of the band</p>
+        <p>Lady vudu, is a music band from the underbelly of Medellin Streets, I helped them deploy thier ideas on the grid so they can focus ont the art, a responsive website pushed higher by the graphic abilities of the band.</p>
         <%= link_to 'Whole Story', '#', :class => 'btn-2 btn-default btn-lg' %>
       </div>  
       <div class="col-xs-12 col-sm-4 lady-look">
