--- a/app/assets/stylesheets/master.css.scss
+++ b/app/assets/stylesheets/master.css.scss
@@ -36,7 +36,7 @@ p {
 	margin: 1em 0 1em 0;
 	font-size: 22px;
 	font-style: sans-serif;	
-	font-weight: 100;
+	font-weight: 200;
 }
 
 .firstcharacter { 
@@ -50,7 +50,6 @@ p {
 	background-color: transparent;
   border:0px; 
   padding-top:35px;
- 
 } 
 
 .navbar-toggle {
@@ -104,6 +103,10 @@ p {
 	font-size:22px;
 }
 
+.skill-lockup h3 {
+	margin-bottom: 1em;
+}
+
 .progress {
 	margin: 0.5em 1.5em 0.5em 1.5em;
 	height: 10px;	
@@ -122,6 +125,10 @@ p {
 	text-align:right;
 }
 
+.lady-tell, .firehose-tell {
+	text-align: justify;
+}
+
 .social-button {
 	width: 25px;
 	margin:5px;
@@ -137,7 +144,7 @@ p {
 	background-color: rgba(36,32,33,0.8);
 	padding-top: 1.5em;
 	padding-bottom: 1.5em;
-	font-weight:100;
+	font-weight:200;
 	-webkit-background-size: cover;
 	-moz-background-size: cover;
 	-o-background-size: cover;
@@ -146,7 +153,7 @@ p {
 }
 
 .esquina {
-	padding: 1em 0 1em 0;
+	padding: 2em 0 2em 0;
 }
 
 .esquina span {
@@ -154,7 +161,7 @@ p {
 }
 
 .foto {
-	padding: 1em 0 1em 0;
+	padding: 2em 0 2em 0;
 }
 
 .foto span {
