--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -41,7 +41,7 @@
    </div> 
   </div> 
 </header>
-<br style="clr">
+
 
 <section class="about col-xs-12" id="about">
 <br />
@@ -143,7 +143,9 @@
   <div class="container-fluid">
     <div class="experience-unit col-xs-12">
       <div class="col-xs-12 col-sm-4 firehose-look">
-        <p>Aca pongo una imagen</p>
+        <div class="col-xs-12 hose-photo">
+         <img alt="hose" class="img-thumbnail" src="assets/hose-img.jpg">
+        </div>
       </div>  
       <div class="col-xs-12 col-sm-8 firehose-tell">
         <p>Completed Bootcamp @Firehose Project. It was a wonderful experince that open my eyes to the world of web development. Got my hands dirty constructing with Ruby on Rails a bunch of different database driven apps and usign collaborative tools as main focus.<p>
@@ -157,7 +159,9 @@
         <%= link_to 'Whole Story', '#', :class => 'btn-2 btn-default btn-lg' %>
       </div>  
       <div class="col-xs-12 col-sm-4 lady-look">
-        <p>Aca pongo una imagen</p>
+        <div class="col-xs-12 lady-photo">
+         <img alt="lady" class="img-thumbnail" src="assets/the-lady2.jpg">
+        </div>
       </div>
     </div>  
 
@@ -168,8 +172,6 @@
 <%= yield %>
   <!--footer starts here -->
 <div class="clr"></div>
-<br />
-<br />
 <div id="footer">
  <div class="container"> 
     <div class="esquina col-xs-12 col-sm-6">
