--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -148,14 +148,14 @@
         </div>
       </div>  
       <div class="col-xs-12 col-sm-8 firehose-tell">
-        <p>Completed Bootcamp @Firehose Project. It was a wonderful experince that open my eyes to the world of web development. Got my hands dirty constructing with Ruby on Rails a bunch of different database driven apps and usign collaborative tools as main focus.<p>
+        <p>Completed Bootcamp @Firehose Project. It was a wonderful experience that opened my eyes to the world of web development. Got my hands dirty constructing with Ruby on Rails a bunch of different database driven apps and using collaborative tools as main focus.<p>
         <%= link_to 'Whole story', '#', :class => 'btn-2 btn-default btn-lg' %>
       </div>
     </div>
 
     <div class="experience-unit col-xs-12">
       <div class="col-xs-12 col-sm-8 lady-tell">
-        <p>Lady vudu, is a music band from the underbelly of Medellin Streets, I helped them deploy thier ideas on the grid so they can focus ont the art, a responsive website pushed higher by the graphic abilities of the band.</p>
+        <p>Lady vudu, is a rock band from the underbelly of Medellin Streets, I helped them deploy their ideas on the grid we put together a project to promote their career, jointly we built a responsive website pushed higher by the excellent graphic abilities of the band.</p>
         <%= link_to 'Whole Story', '#', :class => 'btn-2 btn-default btn-lg' %>
       </div>  
       <div class="col-xs-12 col-sm-4 lady-look">
