--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -52,9 +52,10 @@
   </div> 
   <div class="col-xs-12"> 
       <div class="col-xs-10 col-xs-offset-1 about-me">
-      <p><span class="firstcharacter">I'</span>m a freelance Web Developer, expirenced app builder, passionate UX and UI designer. 
+      <p><span class="firstcharacter">I'</span>m a freelance Web Developer. 
       I love responsive web design and simple powerful server-end solutions.
-      Please feel free to contact me, I will be happy to answer all your questions about freelancing your project @ e-mail.</p></div>  
+      Please feel free to contact me.
+      I will be happy to answer all your questions about freelancing your project @ e-mail.</p></div>  
   </div>    
   <br />
    <div class="clr"></div>
@@ -139,23 +140,26 @@
 </section>  
 <div class="clr"></div>
 
-<section id="work col xs-12">
-  <div class="container-fluid">
+<section class="col xs-12">
+  <div class="work container-fluid">
     <div class="experience-unit col-xs-12">
       <div class="col-xs-12 col-sm-4 firehose-look">
         <div class="col-xs-12 hose-photo">
-         <img alt="hose" class="img-thumbnail" src="assets/hose-img.jpg">
+         <!-- <img alt="hose" class="img-thumbnail" src=""> -->
+          <h1>BOOTCAMP(:)</h1>
+            <h3>Ruby, rails, CSS, HTML, JavaScript and git intensive training. </h3>
         </div>
       </div>  
       <div class="col-xs-12 col-sm-8 firehose-tell">
-        <p>Completed Bootcamp @Firehose Project. It was a wonderful experience that opened my eyes to the world of web development. Got my hands dirty constructing with Ruby on Rails a bunch of different database driven apps and using collaborative tools as main focus.<p>
+        <p> Bootcamp @Firehose Project Completed. It was a wonderful experience, gave me the opportunity to learn web development using Ruby on Rails as main framework to support HTML and CSS.
+        We built different database driven apps using collaborative tools such as git and codeship. <p>
         <%= link_to 'Whole story', '#', :class => 'btn-2 btn-default btn-lg' %>
       </div>
     </div>
 
     <div class="experience-unit col-xs-12">
       <div class="col-xs-12 col-sm-8 lady-tell">
-        <p>Lady vudu, is a rock band from the underbelly of Medellin Streets, I helped them deploy their ideas on the grid we put together a project to promote their career, jointly we built a responsive website pushed higher by the excellent graphic abilities of the band.</p>
+        <p>Lady vudu, is a rock band from the underbelly of Medellin Streets, I helped them deploy their ideas on the grid we put together a project to promote their career, we built a responsive website pushed higher awesome graphic abilities of the band.</p>
         <%= link_to 'Whole Story', '#', :class => 'btn-2 btn-default btn-lg' %>
       </div>  
       <div class="col-xs-12 col-sm-4 lady-look">
@@ -178,7 +182,7 @@
       <span>Seb -  Web Developer</span><br />
       <span>I like technology and things that help us live a simpler life.</span>
       <br />
-      <span>E-mail: coustum@mail.com</span>       
+      <span>E-mail: tonomudo@gmail.com</span>       
     </div>  
     <div class="foto col-xs-12 col-sm-5 col-sm-offset-1">
       <span>Feel free to <b>ASK ME</b> any question about freelancing your project.
