--- a/app/assets/stylesheets/master.css.scss
+++ b/app/assets/stylesheets/master.css.scss
@@ -160,7 +160,7 @@ p {
 }
 
 .social-button {
-	width: 25px;
+	width: 30px;
 	margin:5px;
 }
 
@@ -222,7 +222,7 @@ p {
   text-transform: uppercase;
   background: none;
   border: 0px solid #fff;
-  color: #D3145A;
+  color: white;
   transition: all 0.5s;  
   display: inline-block;
 }
