Make icon a link: github

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -191,7 +191,9 @@
       <br />
       <b>Find me:</b>
       <br /></span>
-      <%= image_tag 'github.png', :class => 'social-button' %>
+      <%= link_to 'https://github.com/sebtn' do %>
+        <%= image_tag 'github.png', :class => 'social-button' %>
+      <% end %>  
       <%= image_tag 'gmail.png', :class => 'social-button' %>
       <%= image_tag 'facebook.png', :class => 'social-button' %>
        
